added reranking + RAG and other changes